--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
   },
   "homepage": "https://github.com/devansh016/Certificate-Manager#readme",
   "dependencies": {
+    "aws-sdk": "^2.1199.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "image-to-base64": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
     "mongoose": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "nodemailer": "^6.7.8",
     "uuid": "^8.3.2"
   }
 }
